views listPersons and addPerson wip

--- a/source/app/src/main/res/values/strings.xml
+++ b/source/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Gifts</string>
+    <string name="place_holder_firstname">Prénom</string>
+    <string name="place_holder_lastName">Nom</string>
 </resources>
